--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 model/ViBert/vi_Bert_onnx/phobert-base.onnx filter=lfs diff=lfs merge=lfs -text
+model/ChBert/ch_Bert_onnx/ch_bert-wwm-ext.onnx filter=lfs diff=lfs merge=lfs -text
