--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,150 @@
-streamlit
-torch
-underthesea
-jieba
-transformers
-uvicorn
-fastapi
-scikit-learn
-numpy
-bs4
-onnxruntime
-pandas
-pycountry
+aiohttp==3.8.3
+aiosignal==1.2.0
+altair==4.2.2
+anyio==3.6.2
+async-generator==1.10
+async-timeout==4.0.2
+asynctest==0.13.0
+attrs==22.2.0
+backcall==0.2.0
+backports.zoneinfo==0.2.1
+beautifulsoup4==4.11.2
+blinker==1.5
+breadability==0.1.20
+bs4==0.0.1
+cachetools==5.3.0
+certifi==2022.12.7
+chardet==5.1.0
+charset-normalizer==3.0.1
+click==8.1.3
+coloredlogs==15.0.1
+cycler==0.11.0
+datasets==2.6.1
+debugpy==1.6.3
+decorator==5.1.1
+dill==0.3.5.1
+docopt==0.6.2
+entrypoints==0.4
+exceptiongroup==1.1.0
+fastapi==0.88.0
+filelock==3.9.0
+flatbuffers==23.3.3
+fonttools==4.38.0
+frozenlist==1.3.1
+fsspec==2022.10.0
+gensim==4.2.0
+gitdb==4.0.10
+GitPython==3.1.30
+googledrivedownloader==0.4
+h11==0.14.0
+huggingface-hub==0.12.0
+humanfriendly==10.0
+idna==3.4
+importlib-metadata==6.0.0
+importlib-resources==5.10.2
+ipykernel==6.16.0
+ipython==7.34.0
+jedi==0.18.1
+jieba==0.42.1
+Jinja2==3.1.2
+joblib==1.2.0
+jsonschema==4.17.3
+jupyter-core==4.11.1
+jupyter_client==7.3.5
+kiwisolver==1.4.4
+Levenshtein==0.20.7
+lxml==4.9.2
+markdown-it-py==2.1.0
+MarkupSafe==2.1.2
+matplotlib==3.5.3
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mpmath==1.3.0
+multidict==6.0.2
+multiprocess==0.70.13
+nest-asyncio==1.5.5
+nltk==3.8.1
+nose==1.3.7
+numpy==1.21.6
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+onnxruntime==1.14.1
+outcome==1.2.0
+packaging==23.0
+pandas==1.3.5
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.2.0
+pkgutil_resolve_name==1.3.10
+polars==0.16.11
+prompt-toolkit==3.0.31
+protobuf==3.20.3
+psutil==5.9.2
+ptyprocess==0.7.0
+pyarrow==10.0.0
+pycountry==22.3.5
+pydantic==1.10.2
+pydeck==0.8.0
+Pygments==2.14.0
+Pympler==1.0.1
+pyparsing==3.0.9
+pyrsistent==0.19.3
+PySocks==1.7.1
+python-crfsuite==0.9.9
+python-dateutil==2.8.2
+python-Levenshtein==0.20.7
+pyttsx3==2.90
+pytz==2022.5
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
+pyzmq==24.0.1
+rapidfuzz==2.12.0
+regex==2022.10.31
+requests==2.28.2
+responses==0.18.0
+rich==13.3.1
+scikit-learn==1.0.2
+scipy==1.7.3
+selenium==4.8.0
+semver==2.13.0
+six==1.16.0
+sklearn-crfsuite==0.3.6
+smart-open==6.2.0
+smmap==5.0.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+starlette==0.22.0
+streamlit==1.18.1
+sympy==1.10.1
+tabulate==0.9.0
+threadpoolctl==3.1.0
+tokenizers==0.13.2
+toml==0.10.2
+toolz==0.12.0
+torch==1.13.1
+torchtext==0.13.1
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.4.0
+transformers==4.26.1
+trio==0.22.0
+trio-websocket==0.9.2
+typing_extensions==4.4.0
+tzdata==2022.7
+tzlocal==4.2
+underthesea==6.1.1
+underthesea_core==0.0.5a2
+Unidecode==1.3.6
+urllib3==1.26.14
+uvicorn==0.20.0
+validators==0.20.0
+watchdog==2.2.1
+wcwidth==0.2.5
+wsproto==1.2.0
+xxhash==3.1.0
+yarl==1.8.1
+zipp==3.13.0
