--- a/requirements.txt
+++ b/requirements.txt
@@ -70,7 +70,7 @@ nvidia-cublas-cu11==11.10.3.66
 nvidia-cuda-nvrtc-cu11==11.7.99
 nvidia-cuda-runtime-cu11==11.7.99
 nvidia-cudnn-cu11==8.5.0.96
-onnxruntime==1.14.1
+onnxruntime-gpu==1.10.0
 outcome==1.2.0
 packaging==23.0
 pandas==1.3.5
